Add images convertation module

--- a/src/assets/styles/components/author.scss
+++ b/src/assets/styles/components/author.scss
@@ -14,7 +14,7 @@
       content: "";
       display: block;
       float: left;
-      background-image: url('../images/icons/github-mark.png');
+      background-image: url('../images/icons/github-mark.webp');
       background-position: center;
       background-size: contain;
       width: 2vw;
